--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,6 @@
         "target": "ES6",
         "noEmitOnError": true,
         "noImplicitAny": true
-        // "module": "commonjs"
     },
-    "include": [
-        "app/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["app/**/*"]
 }
